--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
 
@@ -24,6 +24,9 @@
             </ul>
         </nav>
     </header>
+
+    <!--The following div tag is utilized to create an image background between the heading and body and should remain-->
+    
     <div class="hero"></div>
     <main>
         <section id="search-engine-optimization" class="search-engine-optimization">
